Fix padding on main (when on mobile)

--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -35,6 +35,10 @@
         background-image: url('../assets/images/cream_dust.png');
         background-repeat: repeat;
     }
+
+    @media screen and (max-width: @screen-xs-max){
+        padding-top: 0;
+    }
 }
 
 [uib-tooltip]{
